--- a/csb-core/src/main/resources/application.properties
+++ b/csb-core/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #jpa configure
 jpa.persistenceUnitName=jpa.csb
-jpa.generateDdl=false
+jpa.generateDdl=true
 jpa.database=MYSQL
 jpa.databasePlatform=org.hibernate.dialect.MySQL5InnoDBDialect
 jpa.showSql=true
