--- a/csb-platform-controller/pom.xml
+++ b/csb-platform-controller/pom.xml
@@ -14,17 +14,35 @@
 	<artifactId>csb-platform-controller</artifactId>
 	<name>Cloud Service Broker Platform Controller Lib</name>
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-parser</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-broker</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
