--- a/csb-platform-broker/pom.xml
+++ b/csb-platform-broker/pom.xml
@@ -16,15 +16,21 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-provision</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
