--- a/csb-platform-broker/pom.xml
+++ b/csb-platform-broker/pom.xml
@@ -17,6 +17,11 @@
 
 		<dependency>
 			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.csb</groupId>
 			<artifactId>csb-platform-provision</artifactId>
 			<version>1.0</version>
 		</dependency>
