--- a/csb-platform-broker/pom.xml
+++ b/csb-platform-broker/pom.xml
@@ -17,7 +17,7 @@
 
 		<dependency>
 			<groupId>com.csb</groupId>
-			<artifactId>csb-platform-core</artifactId>
+			<artifactId>csb-core</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
