--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
 
 	<modules>
 		<module>csb-mall</module>
+		<module>csb-common</module>
 		<module>csb-core</module>
 		<module>csb-service</module>
 		<module>csb-service-platform</module>
 		<module>csb-platform-controller</module>
 		<module>csb-platform-parser</module>
 		<module>csb-platform-broker</module>
-		<module>csb-platform-provision</module>
+		<module>csb-platform-provision-openstack</module>
 		<module>csb-platform-openapi</module>
 		<module>csb-platform-sso</module>
 		<module>csb-platform-oauth</module>
