--- a/csb-mall/pom.xml
+++ b/csb-mall/pom.xml
@@ -15,6 +15,11 @@
 	<name>Cloud Service Broker Mall Web</name>
 	<dependencies>
 	
+		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-common</artifactId>
+			<version>1.0</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.csb</groupId>
@@ -22,17 +27,6 @@
 			<version>1.0</version>
 		</dependency>
 		
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -52,21 +46,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency>
-
 	</dependencies>
 
 </project>
