--- a/csb-service-platform/pom.xml
+++ b/csb-service-platform/pom.xml
@@ -14,23 +14,17 @@
 	<artifactId>csb-service-platform</artifactId>
 	<name>Cloud Service Broker Platform Service Lib</name>
 	<dependencies>
-	
-		
+
+		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-common</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.csb</groupId>
 			<artifactId>csb-core</artifactId>
 			<version>1.0</version>
-		</dependency>
-		
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
 		</dependency>
 
 		<dependency>
@@ -52,21 +46,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-		</dependency>
-
 	</dependencies>
 
 </project>
