--- a/csb-platform-provision-openstack/pom.xml
+++ b/csb-platform-provision-openstack/pom.xml
@@ -21,6 +21,11 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-provision</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
@@ -38,6 +43,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.pacesys</groupId>
+			<artifactId>openstack4j</artifactId>
+			<version>2.0.4</version>
 		</dependency>
 	</dependencies>
 
