--- a/csb-platform-provision/pom.xml
+++ b/csb-platform-provision/pom.xml
@@ -21,6 +21,11 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-core</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
