--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,7 +11,6 @@
 
 	<properties>
 		<!-- 主要依赖库的版本定义 -->
-		<springside.version>4.3.0-SNAPSHOT</springside.version>
 		<spring.version>4.1.3.RELEASE</spring.version>
 		<hibernate.version>4.3.7.Final</hibernate.version>
 		<mybatis.version>3.2.7</mybatis.version>
@@ -48,7 +47,8 @@
 		<nosqlunit.version>0.8.0</nosqlunit.version>
 		<jetty.version>8.1.16.v20140903</jetty.version>
 		<h2.version>1.3.176</h2.version>
-
+        <mysql.version>5.1.23</mysql.version>
+        
 		<!-- Plugin的属性 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.6</java.version>
