--- a/csb-mall/pom.xml
+++ b/csb-mall/pom.xml
@@ -52,6 +52,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.csb</groupId>
+			<artifactId>csb-platform-controller</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
