--- a/csb-mall/src/main/webapp/WEB-INF/web.xml
+++ b/csb-mall/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
-		<param-value>prod</param-value>
+		<param-value>dev</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
