--- a/csb-mall/src/main/resources/application.sit.properties
+++ b/csb-mall/src/main/resources/application.sit.properties
@@ -4,3 +4,11 @@ jdbc.username=root
 jdbc.password=123456
 jdbc.pool.maxIdle=10
 jdbc.pool.maxActive=50
+
+# authentication remember me settings
+auth.rememberme.parameter.name=rememberme_
+auth.remember.cookie.name=saas_RM_COOKIE
+auth.rememberme.key=saas
+auth.rememberme.duration=3600
+auth.secure.cookie=false
+
