--- a/csb-mall/src/main/webapp/WEB-INF/web.xml
+++ b/csb-mall/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	  <listener>
+        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+    </listener>
 
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -36,6 +40,20 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+
+    <!-- spring security filter -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping>
+    
 	<filter>
 		<filter-name>openEntityManagerInViewFilter</filter-name>
 		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
@@ -62,7 +80,7 @@
 	<session-config>
 		<session-timeout>20</session-timeout>
 	</session-config>
-
+<!-- 
 	<error-page>
 		<exception-type>java.lang.Throwable</exception-type>
 		<location>/WEB-INF/views/error/500.jsp</location>
@@ -74,5 +92,5 @@
 	<error-page>
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/error/404.jsp</location>
-	</error-page>
+	</error-page> -->
 </web-app>
