--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.csb</groupId>
 	<artifactId>parent</artifactId>
 	<version>1.0</version>
@@ -47,8 +47,9 @@
 		<nosqlunit.version>0.8.0</nosqlunit.version>
 		<jetty.version>8.1.16.v20140903</jetty.version>
 		<h2.version>1.3.176</h2.version>
-        <mysql.version>5.1.23</mysql.version>
-        
+		<mysql.version>5.1.23</mysql.version>
+		<spring.security.version>3.1.7.RELEASE</spring.security.version>
+
 		<!-- Plugin的属性 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.6</java.version>
@@ -59,31 +60,19 @@
 	</prerequisites>
 
 	<!-- 设定除中央仓库 (repo1.maven.org/maven2/)外的其他仓库,按设定顺序进行查询，如有Nexus私服, 取消注释并指向正确的服务器地址 
-	<repositories>
-		<repository>
-			<id>nexus</id>
-			<name>Team Nexus Repository</name>
-			<url>http://localhost:8081/nexus/content/groups/public</url>
-		</repository>
-	</repositories>-->
+		<repositories> <repository> <id>nexus</id> <name>Team Nexus Repository</name> 
+		<url>http://localhost:8081/nexus/content/groups/public</url> </repository> 
+		</repositories> -->
 
-	<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址
-	<pluginRepositories>
-		<pluginRepository>
-			<id>nexus</id>
-			<name>Team Nexus Repository</name>
-			<url>http://localhost:8081/nexus/content/groups/public</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories> -->
+	<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址 <pluginRepositories> <pluginRepository> 
+		<id>nexus</id> <name>Team Nexus Repository</name> <url>http://localhost:8081/nexus/content/groups/public</url> 
+		<snapshots> <enabled>false</enabled> </snapshots> </pluginRepository> </pluginRepositories> -->
 
-	<!-- 预定义依赖项的version,scope与exclusions,子项目中只需定义groupId 与  artifactId 即可 -->
+	<!-- 预定义依赖项的version,scope与exclusions,子项目中只需定义groupId 与 artifactId 即可 -->
 	<dependencyManagement>
 		<dependencies>
-			<!-- spring-->
-			
+			<!-- spring -->
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
@@ -91,7 +80,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			
+
 			<!-- 纯粹为了exclude commons-loging -->
 			<dependency>
 				<groupId>cn.org.springframework</groupId>
@@ -115,7 +104,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-			
+
 
 			<!-- PERSISTENCE begin -->
 			<!-- hibernate -->
@@ -166,7 +155,7 @@
 				<artifactId>mybatis-spring</artifactId>
 				<version>1.2.2</version>
 			</dependency>
-		
+
 			<!-- connection pool -->
 			<dependency>
 				<groupId>org.apache.tomcat</groupId>
@@ -178,12 +167,9 @@
 
 			<!-- WEB begin -->
 			<!-- spring -->
-			<!-- <dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-webmvc</artifactId>
-				<version>${spring.version}</version>
-			</dependency> -->
-			
+			<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-webmvc</artifactId> 
+				<version>${spring.version}</version> </dependency> -->
+
 			<!-- sitemesh -->
 			<dependency>
 				<groupId>opensymphony</groupId>
@@ -193,7 +179,7 @@
 			</dependency>
 
 			<!-- j2ee web spec -->
-			<!-- update to servlet 3.0 for spring 4.0 MockHttpServletRequest  -->
+			<!-- update to servlet 3.0 for spring 4.0 MockHttpServletRequest -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
@@ -238,6 +224,27 @@
 				<groupId>org.apache.shiro</groupId>
 				<artifactId>shiro-ehcache</artifactId>
 				<version>${shiro.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${spring.security.version}</version>
 			</dependency>
 			<!-- SECURITY end -->
 
@@ -569,7 +576,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>fluent-hc</artifactId>
@@ -581,7 +588,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpcore</artifactId>
@@ -623,7 +630,7 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
-			
+
 			<!-- assertj -->
 			<dependency>
 				<groupId>org.assertj</groupId>
@@ -631,7 +638,7 @@
 				<version>${assertj.version}</version>
 				<scope>test</scope>
 			</dependency>
-			
+
 			<!-- mockito -->
 			<dependency>
 				<groupId>org.mockito</groupId>
@@ -774,7 +781,7 @@
 				<scope>test</scope>
 			</dependency>
 			<!-- TEST end -->
-			
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -954,8 +961,8 @@
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>${jetty.version}</version>
 				</plugin>
-				
-				<!-- tomcat  -->
+
+				<!-- tomcat -->
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
