--- a/csb-core/pom.xml
+++ b/csb-core/pom.xml
@@ -97,7 +97,7 @@
 	</dependencies>
 	
 	<build>
-	<plugins>
+	<!-- <plugins>
 	<plugin>
 		<groupId>org.mybatis.generator</groupId>
 		<artifactId>mybatis-generator-maven-plugin</artifactId>
@@ -128,7 +128,7 @@
 			</dependency>
 		</dependencies>
 	</plugin>
-	</plugins>
+	</plugins> -->
 	</build>
 
 </project>
