--- a/csb-mall/src/main/webapp/WEB-INF/web.xml
+++ b/csb-mall/src/main/webapp/WEB-INF/web.xml
@@ -54,14 +54,14 @@
         <dispatcher>ERROR</dispatcher>
     </filter-mapping>
     
-	<filter>
+	<!-- <filter>
 		<filter-name>openEntityManagerInViewFilter</filter-name>
 		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>openEntityManagerInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
